fix star alignment

--- a/src/app/styl/views/movie_detail.styl
+++ b/src/app/styl/views/movie_detail.styl
@@ -165,7 +165,6 @@
                             width 1em
                             height 1em
                             line-height 1em
-                            margin-top 2px
                             margin-right -2px
                             margin-left 2px
 
